Changelog
=========


1.3 (unreleased)
------------------

- Add Plone 4.3 compatibility, drop Plone <= 4.0
  [jone]

- IZUG4: ContentPage contentlisting styling.
  [mathias.leimgruber]

- IZUG4: manage subsite styling.
  [mathias.leimgruber]

- IZUG4: Simplelayout dropzone portlets styling.
  [mathias.leimgruber]

- GEVER: Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]

- GEVER: Fixed search customizations for plone 4.2
  [phgross]

- Fix izug batching customizations for plone 4.2.
  See https://bugs.launchpad.net/zope.tales/+bug/1002242 for more infos.
  [mathias.leimgruber]

- GEVER: Added better collapsible/expanded styling for the contenttreewidget.
  [phgross]

- Add styling for new tabbedview menu to opengever profile.
  [phgross]

- Teamraum 3.0.2 style fixes.
  [mathias.leimgruber]

- GEVER: Added sprite icon for docugate action.
  [phgross]

- Fix image margin on tabbeview overview.
  [mathias.leimgruber]

- fix blog styling.
  [tschanzt]

- Fixed french livesearch legend is over searchbox in opengever.
  [Julian Infanger]

- Add styling for new tabbedview menu to izug4 profile.
  [jone]

- Show arrow on external links or links with a _blank target.
  [jone]

- Change portlet folding icons according to "design fundamentals".
  [jone]

- Fixed french livesearch legend translation.
  [phgross]


1.2.1 (2012-09-12)
------------------

- Changed styling of tabbedview menu actions, they fold now to the right.
  [phgross]


1.2 (2012-08-22)
----------------

- Styled solr search page.
  [buchi]

- iZug 4: hide disabled tabbed view filter field.
  [jone]

- Set IE8 mode on zug plone 3 sites.
  [mathias.leimgruber]

- Do not use style <q> as italic on headings (@@sharing).
  [jone]

- Data grid widget: style "add row" buttons.
  [jone]

- Added iZug specific UI style for Openlayers
  [href]


1.1.9 (2012-06-28)
------------------

- Added IE9 fix for the participation roles field (list widget).
  [phgross]
