@@ -5,6 +5,9 @@ Changelog
 1.3 (unreleased)
 ------------------
 
+- Remove folder contents customizations.
+  [jone]
+
 - Add Plone 4.3 compatibility, drop Plone <= 4.0
   [jone]
 
